syntax = "proto3";

package sunrise.liquiditypool;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/sunriselayer/sunrise/x/liquiditypool/types";

message TickInfo {
  uint64 pool_id = 1;
  int64 tick_index = 2;
  string liquidity_gross = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"liquidity_gross\"",
    (gogoproto.nullable) = false
  ];
  string liquidity_net = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"liquidity_net\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.DecCoin fee_growth = 5 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
  UptimeTrackers uptime_trackers = 6 [
    (gogoproto.moretags) = "yaml:\"uptime_trackers\"",
    (gogoproto.nullable) = false
  ];
}

message UptimeTrackers {
  repeated UptimeTracker list = 1 [ (gogoproto.nullable) = false ];
}

message UptimeTracker {
  repeated cosmos.base.v1beta1.DecCoin uptime_growth_outside = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
}
